--- a/public/style/style.css
+++ b/public/style/style.css
@@ -155,3 +155,36 @@ input::placeholder{
     font-size: 0.8rem;
     margin-top: 5px;
 }
+
+
+
+
+
+
+
+
+/* Style Page register */
+fieldset{
+    margin: 30px auto;
+    width: 60%;
+    border: 1px solid var(--main-title-color);
+    border-radius: 25px;
+    padding: 15px 25px ;
+}
+
+.space{
+    width: 55%;
+    padding: 15px 25px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 10px;
+
+}
+
+.ContBtn{
+    display: flex;
+    width: 100%;
+    padding: 15px;
+    justify-content: flex-end;
+}
