--- a/public/style/register.css
+++ b/public/style/register.css
@@ -1,4 +1,13 @@
 /* Style Page register */
+.contForm{
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+
 fieldset{
     margin: 30px auto;
     width: 60%;
@@ -23,3 +32,31 @@ fieldset{
     padding: 15px;
     justify-content: flex-end;
 }
+
+@media screen and (max-width: 500px) { 
+    form > fieldset {
+        width: 80%;
+ 
+    }
+    fieldset{
+      
+    padding: 15px 5px ;
+       
+    }
+    .space > input{
+      
+        width: 150px;
+           
+        }
+}
+
+@media screen and (max-width: 250px) {
+
+    form >  fieldset {
+     
+        width: 220px;
+ 
+    }
+
+} 
+
