MAJ Form register

--- a/public/style/register.css
+++ b/public/style/register.css
@@ -50,6 +50,13 @@ fieldset{
         }
 }
 
+.check{
+    display: inline;
+}
+.error{
+    display: inline;
+}
+
 @media screen and (max-width: 250px) {
 
     form >  fieldset {
