--- a/public/style/register.css
+++ b/public/style/register.css
@@ -33,7 +33,29 @@ fieldset{
     justify-content: flex-end;
 }
 
+.Return{
+    text-align: center;
+    position: relative;
+    right: 300px;   
+}
+
+.Return > a{
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+}
+@media screen and (max-width: 980px) { 
+    .Return{
+        right: 100px;
+    }
+    h1{
+        font-size: 3rem;
+    }
+}
+
+
 @media screen and (max-width: 500px) { 
+
     form > fieldset {
         width: 80%;
  
@@ -48,14 +70,15 @@ fieldset{
         width: 150px;
            
         }
+    .Return{
+        right: 0px;
+    }
+    h1{
+        font-size: 2rem;
+    }
 }
 
-.check{
-    display: inline;
-}
-.error{
-    display: inline;
-}
+
 
 @media screen and (max-width: 250px) {
 
@@ -64,6 +87,8 @@ fieldset{
         width: 220px;
  
     }
-
+    h1{
+        font-size: 1rem;
+    }
 } 
 
