--- a/public/style/register.css
+++ b/public/style/register.css
@@ -8,6 +8,7 @@
     gap: 30px;
 }
 
+
 fieldset{
     margin: 30px auto;
     width: 60%;
@@ -43,6 +44,16 @@ fieldset{
     display: inline-block;
     width: 100%;
     height: 100%;
+}
+.suc_err{
+    width: 60%;
+    padding: 10px;
+    text-align: center;
+    margin: 50px auto;
+    font-size: 1rem;
+    background-color: var(--main-title-color);
+    border-radius: 25px;
+
 }
 @media screen and (max-width: 980px) { 
     .Return{
