--- a/public/style/dashboard-trainee.css
+++ b/public/style/dashboard-trainee.css
@@ -21,6 +21,13 @@
     justify-content: space-around;
 
 }
+
+.dashboard-firstPart {
+    height: 400px;
+    border : 2px solid var(--main-title-color);
+    border-radius: 15px;
+}
+
 .recap-retards-absences span {
     color : var(--main-title-color)
 }
