--- a/public/style/style.css
+++ b/public/style/style.css
@@ -79,20 +79,27 @@ header{
     height: 40px;
 }
 
-/* Page connexion */
-.container {
-    height:100vh;
+
+/* INDEX */
+
+
+
+.container-index{
     display: flex;
     flex-direction: column;
+    height: 100vh;
     justify-content: center;
-    align-items: center;
-    gap:4rem
+    gap:40px
+
 }
 
-.container-button{
+.container-button-index{
     display: flex;
-    gap:40px
+    gap:40px;
+    justify-content: center;
+
 }
+
 
 /*Navigation */
 
@@ -245,6 +252,9 @@ nav img
       }
 }
 
+@media all and (min-width: 768px) {
+    
+}
 
 @media all and (min-width: 768px) {
     .nav__burger {
@@ -286,20 +296,44 @@ nav img
     color:var(--main-title-color)
 }
 
+
+
+/* Page connexion */
+.container-login, .container-reset-password {
+    height:100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap:4rem
+}
+
+.container-button-back {
+    align-self:flex-start;
+    margin-top: 20px;
+
+}
+
+
+
+
 /* Login form */
-.login-form-container{
+.login-form-container, .reset-password-form-container{
     height: 450px;
     width: 410px;
     border: solid 2px var(--main-title-color);
     border-radius: 50px;
     overflow: hidden;
 
+
 }
-.login-form-top{
+.login-form-top, .reset-password-form-top{
     background-color: var(--main-title-color);
     border:solid 2px var(--main-title-color);
-    height: 100px;
     padding: 10px 5px;
+    margin-bottom: 20px;
+    box-sizing: content-box;
+    
 
 
 }
@@ -314,6 +348,16 @@ form{
     height: 75%;
     width: 98%;
 }
+
+.reset-password-form-container form{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 75%;
+    width: 98%;
+}
+
+
 .form-group {
     margin : 10px auto;
     width: 90%;
@@ -324,7 +368,7 @@ form{
 input::placeholder {
     font-weight: 100;
 }
-.container-btn {
+.container-button-center {
     display: flex;
     justify-content: center;
 }
@@ -358,6 +402,8 @@ Les autres éléments s'afficheront grâce à php et ne seront pas impactés par
 .message-alerte {
     width: 100%;
     color: crimson;
+    font-family : 'Montserrat';
+    font-size : 0.8rem;
 
 }
 
@@ -372,5 +418,46 @@ Les autres éléments s'afficheront grâce à php et ne seront pas impactés par
     font-size: 0.8rem;
     margin-top: 5px;
 }
+
+
+/* Form reset-password  */
+
+
+
+.login.btn {
+    margin-top: 20px;
+}
+
+.container-reset-password form{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 30%;
+    width: 98%;
+}
+.form-group {
+    margin : 10px auto;
+    width: 90%;
+    font-family: 'Gilroy';
+    position:relative
+}
+
+.password-forgotten-text {
+    text-align: center;
+    margin-top: 15%;
+}
+
+.password-forgotten-text h3 {
+    text-align: center;
+    font-family: 'gilroy';
+    font-size: 1rem;
+    color:var(--main-title-color)
+}
+.password-forgotten-text p {
+    text-align: center;
+    font-family: 'montserrat';
+    font-size: 0.8rem;
+}
+
 
 
