--- a/templates/pages/home/index.html.twig
+++ b/templates/pages/home/index.html.twig
@@ -1,3 +1,6 @@
+{% extends "partials/base.html.twig" %} 
+
+{% block body%}
 <div class="container container-index">
     <h1>ADMIN MNS</h1>
     <div class='container-button-index'>
@@ -5,4 +8,5 @@
         <a href="/?action=register"><button type="button" class="btn btn-primary btn-lg">Inscription</button></a>
     </div>
 </div>
+{% endblock %}
 
