check forgot password

--- a/templates/pages/security/forgot-password.html.twig
+++ b/templates/pages/security/forgot-password.html.twig
@@ -20,17 +20,17 @@
                     <img src="images/check.svg" alt="icone de validation" class="icone-verif login-js">
                     <span class="message-alerte login-js">Rentrez un email valide.</span>
                 </div>
-                {% if message is not empty %}>
+                {% if message is not empty %}
                     <span class="message-alerte">{{message}}</span>
                 {% endif %} 
+                {% if messageErrorEmail is not empty %}
+        <span class="message-alerte">{{messageErrorEmail}}</span>
+        {% endif %} 
             </div>
             <div class="container-button-center">
                 <input type="submit" class="btn btn-primary" value="Valider" name="submit" />
             </div>
         </form>    
-        {% if messageErrorEmail is not empty %}>
-        <span class="message-alerte">{{messageErrorEmail}}</span>
-        {% endif %} 
         <div class="password-forgotten-text">
             <h3>Vous avez changé d'adresse email ?</h3>
             <p>Si vous n’utilisez plus l’adresse email associée à votre compte MNS, merci de prendre contact avec l’équipe de MNS soit par email à l’adresse contact@metznumericschool.fr ou par téléphone au 03 87 16 07 17</p>
