--- a/templates/pages/admin/index.html.twig
+++ b/templates/pages/admin/index.html.twig
@@ -1,5 +1,7 @@
+{% extends "partials/base-admin.html.twig" %} 
+{% block body%}
 <div class='contBtnMenu'>
-        <button type="button" class="active btn btn-primary btn-lg"><a href="/?page=admin">Inscrits</a></button>
+        <button type="button" class="active btn btn-primary btn-lg"><a href="/?controller=admin&action=candidats">Inscrits</a></button>
         <button type="button" class="btn btn-primary btn-lg"><a href="/?page=candidats">Candidats</a></button>
         <button type="button" class="btn btn-primary btn-lg"><a href="/?page=trainees">Stagiaires</a></button>
 </div>
@@ -13,18 +15,17 @@
             <!-- <td>Formation</td> -->
         </thead>
         <tbody>
-            <?php  foreach ($registered as $user) :?>
-                <tr >
-                <td class="cel" ><a class="anim-hover" href="index.php?page=profile&id=<?= $user['id_user'] ?>"><?= $user['firstName'] ?></a></td>
-                <td class="cel"><a ><?= $user['familyName'] ?></a></td>
-                <td class="cel"><a mailto="<?= $user['email'] ?>"><?= $user['email'] ?></a></td>
-                <td class="cel"><a><?= $user['tel'] ?></a></td>
-                <!-- <td>< ?= $user['formation'] ?></td> -->
+            {% for user in registered %}
+                <tr>
+                    <td class="cel" ><a class="anim-hover" href="index.php?page=profile&id={{ user.id_user }} ?>">{{ user.firstName }}</a></td>
+                    <td class="cel"><a >{{ user.familyName }}</a></td>
+                    <td class="cel"><a mailto="{{ user.email }}">{{ user.email }}</a></td>
+                    <td class="cel"><a>{{ user.tel }}</a></td>
                 </tr>
-            
-            <?php endforeach ;?>
+            {% endfor %}
         </tbody>
     </table>
 </div>
 <script src="scripts/adminDash.js"></script>
 
+{% endblock %}
