--- a/templates/pages/security/index.html.twig
+++ b/templates/pages/security/index.html.twig
@@ -26,7 +26,7 @@
                 <input type="password"  name="password" class="form-control" id="password_input" placeholder="tappez votre mot de passe">
                 {% if password_error is defined %} {% include "partials/inc_password-error.php" %}
                 {% endif %}
-                {% if error_account is defined %} {% include'../templates/partials/inc_account-error.php' %}
+                {% if error_account is defined %} {% include "partials/inc_account-error.php" %}
                 {% endif %}
             </div>    
                 <div class="container-button-center">
