--- a/templates/pages/security/reset-password.html.twig
+++ b/templates/pages/security/reset-password.html.twig
@@ -1,14 +1,17 @@
+{% extends "partials/base.html.twig" %} 
+
+{% block body %}
+
 <div class="container container-reset-password">
-
-    <?php if(!empty($success)) : ?>
-        <span class="alert alert-light" role="alert"><?=$success;?></span>
-    <?php endif ;?>    
-    <?php if(!empty($error)) : ?>
-        <span class="alert alert-danger" role="alert"><?=$error;?></span>
-    <?php endif ;?> 
-    <?php ($form) ? require 'reset-password-form.tpl.php': null;?> 
-
+    {% if success is not empty %}
+        <span class="alert alert-light" role="alert">{{success}}</span>
+    {% endif %}  
+    {% if error is not empty %}
+        <span class="alert alert-danger" role="alert">{{error|raw}}</span>
+    {% endif %}
+    {{ form ? include('reset-password-form.html.twig') : null }} 
 </div>
-
 <script src="scripts/login-check.js"></script>
+
+{% endblock %}
 
