--- a/templates/pages/admin/index.html.twig
+++ b/templates/pages/admin/index.html.twig
@@ -17,10 +17,10 @@
         <tbody>
             {% for user in registered %}
                 <tr>
-                    <td class="cel" ><a class="anim-hover" href="index.php?page=profile&id={{ user.id_user }} ?>">{{ user.firstName }}</a></td>
-                    <td class="cel"><a >{{ user.familyName }}</a></td>
-                    <td class="cel"><a mailto="{{ user.email }}">{{ user.email }}</a></td>
-                    <td class="cel"><a>{{ user.tel }}</a></td>
+                    <td class="cel" data-info="Prénom" ><a class="anim-hover" href="index.php?page=profile&id={{ user.id_user }} ?>">{{ user.firstName }}</a></td>
+                    <td class="cel" data-info="Nom" ><a >{{ user.familyName }}</a></td>
+                    <td class="cel" data-info="Email" ><a mailto="{{ user.email }}">{{ user.email }}</a></td>
+                    <td class="cel" data-info="Tel" ><a>{{ user.tel }}</a></td>
                 </tr>
             {% endfor %}
         </tbody>
