--- a/templates/pages/security/index.html.twig
+++ b/templates/pages/security/index.html.twig
@@ -23,7 +23,7 @@
             </div>
             <div class="form-group">
                 <label for="password">Mot de passe</label>
-                <input type="password"  name="password" class="form-control" id="password_input" placeholder="tappez votre mot de passe">
+                <input type="password"  name="password" class="form-control" id="password_input" placeholder="tapez votre mot de passe">
                 {% if password_error is defined %} {% include "partials/inc_password-error.php" %}
                 {% endif %}
                 {% if error_account is defined %} {% include "partials/inc_account-error.php" %}
