--- a/templates/pages/security/reset-password-form.html.twig
+++ b/templates/pages/security/reset-password-form.html.twig
@@ -8,7 +8,7 @@
     <form method='post' action='#'>
         <div class="form-group">
             <label for="password">Nouveau mot de passe</label>
-            <input type="password"  name="password1" class="form-control" id="password_input" placeholder="tappez votre mot de passe">
+            <input type="password"  name="password1" class="form-control" id="password_input" placeholder="tapez votre mot de passe">
             {% if error_password1 is empty %}
                 <span class="message-alerte">{{error_password1}}</span>
                 <img src="images/error.svg" alt="icone de validation" class="icone-verif">
@@ -17,7 +17,7 @@
         <input type="hidden" name="action" value="update" />
         <div class="form-group">
             <label for="password">Confirmer votre nouveau de passe</label>
-            <input type="password"  name="password2" class="form-control" id="password_input" placeholder="confirmez nouveau mot de passe">
+            <input type="password"  name="password2" class="form-control" id="password_input" placeholder="confirmez votre nouveau mot de passe">
             {% if error_password2 %}
                 <span class="message-alerte">{{error_password2}}</span>
                 <img src="images/error.svg" alt="icone de validation" class="icone-verif">
