--- a/templates/pages/candidate/index.html.twig
+++ b/templates/pages/candidate/index.html.twig
@@ -4,14 +4,58 @@
 
 <div class="container-titre-dashboard">
     <h2>Bonjour {{candidate.getFirstName}}, bienvenue sur votre espace personnel ! </h2>
-    <p>Vous êtes candidat à la formation {{training.getTitleFormation}}</p>
+    <p>Vous êtes candidat à la formation '{{training.getTitleFormation}}'</p>
     <p>Pour compléter votre dossier et permettre à l’équipe de MNS d’étudier votre candidature, merci de nous transmettre les documents ci-dessous avant le $dateFinCand</p>
 </div>
 <div class="container-dashboard">
-    <div class="dashboard-personal-info">
-        <div class="personal-info-content">
-        </div>
-    </div>
-
+<form action="?controller=candidate&action=sendFile" method='post' enctype='multipart/form-data'>
+    <table class="dataTable">
+        <colgroup>
+            <col class='col-1' span="1" >
+            <col class='col-2' span='1'>
+        </colgroup>
+            <tr>
+                <td scope='col' class='up-left col-1'>CV</td>
+                <td class='up-right col-2'>
+                    <label for='CV'>
+                        <i class="fa-solid fa-cloud-arrow-up"></i>
+                    </label>
+                    <input id='CV' type='file' name="CV" accept=".pdf"/>
+                </td>
+            </tr>
+            <tr>
+                <td scope='col' class='cell col-1'>Lettre de motivation</td>
+                <td class='cell col-2'>
+                    <label for='motivation_letter'>
+                        <i class="fa-solid fa-cloud-arrow-up"></i>
+                    </label>
+                    <input id='motivation_letter' type='file' name="motivation_letter" accept=".pdf"/>
+                </td>
+            </tr>
+            <tr>
+               <td scope='col' class='cell col-1'>Dernier diplôme</td>
+               <td  class='cell col-2'>
+                    <label for='diploma'>
+                        <i class="fa-solid fa-cloud-arrow-up"></i>
+                    </label>
+                    <input id='diploma' type='file' name="diploma" accept=".pdf"/>
+                </td>
+            </tr>
+            <tr>
+                <td scope='col' id='td_id-card' class='down-left'>Carte d'identité</td>
+                <td class='down-right col-2'>
+                    <label for='ID_card'>
+                        <i class="fa-solid fa-cloud-arrow-up"></i>
+                    </label>
+                    <input id='ID_card' type='file' name="ID_card" accept=".pdf"/>
+                </td>
+            </tr>
+            
+        
+        </tbody>
+    </table>
+    <button type="submit" class="btn btn-primary btn-lg">Envoyer</button>
+    </form>
 </div>
+
 {% endblock %}
