--- a/templates/partials/base-candidate.html.twig
+++ b/templates/partials/base-candidate.html.twig
@@ -6,7 +6,8 @@
     <script src="https://kit.fontawesome.com/e661624086.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="../style/dashboard-candidate.css">
+    {# <link rel="stylesheet" href="../style/dashboard-candidate.css"> #}
+    <link rel="stylesheet" href="style/candidate.css">
     <title>Admin MNS</title>
   </head>
   <body>
@@ -44,5 +45,6 @@
     {% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src= "scripts/nav.js"></script>
+    <script src="scripts/candidate.js"></script>
   </body>
 </html>
