--- a/templates/pages/admin/index.html.twig
+++ b/templates/pages/admin/index.html.twig
@@ -1,9 +1,9 @@
 {% extends "partials/base-admin.html.twig" %} 
 {% block body%}
 <div class='contBtnMenu'>
-        <button type="button" class="active btn btn-primary btn-lg"><a href="/?controller=admin&action=candidats">Inscrits</a></button>
-        <button type="button" class="btn btn-primary btn-lg"><a href="/?page=candidats">Candidats</a></button>
-        <button type="button" class="btn btn-primary btn-lg"><a href="/?page=trainees">Stagiaires</a></button>
+        <button type="button" class="active btn btn-primary btn-lg"><a href="/?controller=admin&action=Inscrits">Inscrits</a></button>
+        <button type="button" class="btn btn-primary btn-lg"><a href="/?controller=admin&action=candidates">Candidats</a></button>
+        <button type="button" class="btn btn-primary btn-lg"><a href="/?controller=admin&action=trainees">Stagiaires</a></button>
 </div>
 <div class="contData">
     <table class="dataTable">
@@ -11,8 +11,9 @@
             <td class="headTable left">Prénom</td>
             <td class="headTable">Nom</td>
             <td class="headTable">Email</td>
-            <td class="headTable right">Tel</td>
-            <!-- <td>Formation</td> -->
+            <td class="headTable">Tel</td>
+            <td class="headTable right">Formation</td>
+        
         </thead>
         <tbody>
             {% for user in registered %}
@@ -21,6 +22,7 @@
                     <td class="cel" data-info="Nom" ><a >{{ user.familyName }}</a></td>
                     <td class="cel" data-info="Email" ><a mailto="{{ user.email }}">{{ user.email }}</a></td>
                     <td class="cel" data-info="Tel" ><a>{{ user.tel }}</a></td>
+                    <td class="cel" data-info="Formation" ><a>{{ user.title_formation }}</a></td>
                 </tr>
             {% endfor %}
         </tbody>
