--- a/templates/partials/base-admin.html.twig
+++ b/templates/partials/base-admin.html.twig
@@ -26,19 +26,19 @@
               <div class="navbar-notification">
                   <i class="fa-solid fa-bell"></i>
               </div>
-              <div class="navbar-account">
-                  <img class="nav-img-account" src="images/account-img.png" alt="my-account_img"/>
-                  <div class="navbar-account--toggle">
-                      <ul class="navbar-account__content">
-                          <li> <a href="/page=planning" class="navbar--account__links">Mon compte</a></li>
-                          <li><div class="content-log-out">
-                              <a href="/?page=log-out" class="navbar--account__links">
-                                  <i class="fa-solid fa-arrow-right-from-bracket"></i>Déconnexion
-                              </a>
-                          </div></li>
-                      </ul>
-                  </div>
-              </div>
+               <div class="navbar-account">
+                <img class="nav-img-account" src="images/account-img.png" alt="my-account_img"/>
+                <div class="navbar-account--toggle">
+                    <ul class="navbar-account__content">
+                        <li> <a href="/page=planning" class="navbar--account__links">Mon compte</a></li>
+                        <li><div class="content-log-out">
+                            <a href="/?page=log-out" class="navbar--account__links">
+                                <i class="fa-solid fa-arrow-right-from-bracket"></i>Déconnexion
+                            </a>
+                        </div></li>
+                    </ul>
+                </div>
+            </div>
           </div>
       </nav>
     </header>
@@ -47,6 +47,7 @@
   
   {% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+     <script src= "scripts/nav.js"></script>
     <script src= "scripts/nav-admin.js"></script>
   </body>
 </html>
