--- a/templates/pages/security/forgot-password.html.twig
+++ b/templates/pages/security/forgot-password.html.twig
@@ -6,7 +6,7 @@
         <a href="/"><button type="button" class="btn btn-primary btn-back">Retour</button></a>
     </div>
     {% if success is not empty %}
-            <span class="alert alert-success" role="alert">{{success}}</span>
+            <span class="alert alert-success" role="alert">{{success|raw}}</span>
     {% endif %}  
     <div class="login-form-container">
         <div class="login-form-top">
@@ -21,10 +21,10 @@
                     <span class="message-alerte login-js">Rentrez un email valide.</span>
                 </div>
                 {% if message is not empty %}
-                    <span class="message-alerte">{{message}}</span>
+                    <span class="message-alerte">{{message1|raw}}</span>
                 {% endif %} 
                 {% if messageErrorEmail is not empty %}
-        <span class="message-alerte">{{messageErrorEmail}}</span>
+        <span class="message-alerte">{{messageErrorEmail1|raw}}</span>
         {% endif %} 
             </div>
             <div class="container-button-center">
