--- a/templates/pages/security/reset-password.html.twig
+++ b/templates/pages/security/reset-password.html.twig
@@ -4,7 +4,7 @@
 
 <div class="container container-reset-password">
     {% if success is not empty %}
-        <span class="alert alert-light" role="alert">{{success}}</span>
+        <span class="alert alert-light" role="alert">{{success|raw}}</span>
     {% endif %}  
     {% if error is not empty %}
         <span class="alert alert-danger" role="alert">{{error|raw}}</span>
