--- a/templates/pages/trainee/index.html.twig
+++ b/templates/pages/trainee/index.html.twig
@@ -7,12 +7,12 @@
 <div class="container-dashboard">
     <div class="dashboard-personal-info">
         <div class="personal-info-content">
-            <h2>Formation : {{ training.title_formation}}</h2>
+            <h2>Formation : {{ training.TitleFormation}}</h2>
             <div class='personal-data'>
                 <p><strong>Vos informations personnelles :</strong></p>
-                <p>Prénom : {{ trainee.getFirstName}}</p>
+                <p>Prénom : {{ trainee.FirstName}}</p>
                 <p>Nom : {{ trainee.FamilyName}}</p>
-                <p>Email : {{ trainee.getEmail}}</p>
+                <p>Email : {{ trainee.Email}}</p>
             </div>
         </div>
     </div>
