--- a/templates/pages/security/reset-password-form.html.twig
+++ b/templates/pages/security/reset-password-form.html.twig
@@ -10,7 +10,7 @@
             <label for="password">Nouveau mot de passe</label>
             <input type="password"  name="password1" class="form-control" id="password_input" placeholder="tapez votre mot de passe">
             {% if error_password1 is empty %}
-                <span class="message-alerte">{{error_password1}}</span>
+                <span class="message-alerte">{{error_password1|raw}}</span>
                 <img src="images/error.svg" alt="icone de validation" class="icone-verif">
             {% endif %}    
         </div>
@@ -19,7 +19,7 @@
             <label for="password">Confirmer votre nouveau de passe</label>
             <input type="password"  name="password2" class="form-control" id="password_input" placeholder="confirmez votre nouveau mot de passe">
             {% if error_password2 %}
-                <span class="message-alerte">{{error_password2}}</span>
+                <span class="message-alerte">{{error_password21|raw}}</span>
                 <img src="images/error.svg" alt="icone de validation" class="icone-verif">
             {% endif %}   
         </div>
@@ -29,7 +29,7 @@
         </div>
     </form>  
     {% if error_passwords is not empty %}
-        <div class="alert alert-danger alert-form" role="alert">{{error_passwords}}</div>
+        <div class="alert alert-danger alert-form" role="alert">{{error_passwords1|raw}}</div>
     {% endif %}
 </div>
 <script src="scripts/login-check.js"></script>
