--- a/templates/pages/security/forgot-password.html.twig
+++ b/templates/pages/security/forgot-password.html.twig
@@ -6,7 +6,7 @@
         <a href="/"><button type="button" class="btn btn-primary btn-back">Retour</button></a>
     </div>
     {% if success is not empty %}
-            <span class="alert alert-success" role="alert">{{success}}</span>
+            <span class="alert alert-success" role="alert">{{success|raw}}</span>
     {% endif %}  
     <div class="login-form-container">
         <div class="login-form-top">
