--- a/templates/pages/candidate/index.html.twig
+++ b/templates/pages/candidate/index.html.twig
@@ -20,34 +20,34 @@
         {% if key ==0 %}
         
         <tr>
-            <td scope='col' class='up-left col-1'>{{document}}</td>
+            <td scope='col' class='up-left col-1'>{{document.wording_typeOfDoc}}</td>
             <td class='up-right col-2'>
-                <label for='{{document}}'>
+                <label for='{{document.wording_typeOfDoc}}'>
                     <i class="fa-solid fa-cloud-arrow-up"></i>
                 </label>
-                <input id='{{document}}' type='file' name="{{document}}" accept=".pdf"/>
+                <input id='{{document.wording_typeOfDoc}}' type='file' name="{{document.id_typeOfDoc}}" accept=".pdf"/>
             </td>
         </tr>       
         {% endif %}
         {% if key > 0 and key < nbIndex -1 %}
         <tr>
-            <td scope='col' class='cell col-1'>{{document}}</td>
+            <td scope='col' class='cell col-1'>{{document.wording_typeOfDoc}}</td>
             <td class='cell col-2'>
-                <label for='{{document}}'>
+                <label for='{{document.wording_typeOfDoc}}'>
                     <i class="fa-solid fa-cloud-arrow-up"></i>
                 </label>
-                <input id='{{document}}' type='file' name="{{document}}" accept=".pdf"/>
+                <input id='{{document.wording_typeOfDoc}}' type='file' name="{{document.id_typeOfDoc}}" accept=".pdf"/>
             </td>
         </tr>
         {% endif %}
         {% if key == nbIndex -1 %}
         <tr>
-            <td scope='col' id='td_id-card' class='col-1 down-left'>{{document}}</td>
+            <td scope='col' id='td_id-card' class='col-1 down-left'>{{document.wording_typeOfDoc}}</td>
             <td scope='col' class='down-right col-2'>
-                <label for='{{document}}'>
+                <label for='{{document.wording_typeOfDoc}}'>
                     <i class="fa-solid fa-cloud-arrow-up"></i>
                 </label>
-                <input id='{{document}}' type='file' name="{{document}}" accept=".pdf"/>
+                <input id='{{document.wording_typeOfDoc}}' type='file' name="{{document.id_typeOfDoc}}" accept=".pdf"/>
             </td>
         </tr>
         {% endif %}
