--- a/templates/pages/admin/admin.tpl.twig
+++ b/templates/pages/admin/admin.tpl.twig
@@ -1,8 +1,8 @@
 <?php require '../templates/partials/inc_top.php';?>
 <div class='contBtnMenu'>
-        <button type="button" class="active btn btn-primary btn-lg"><a href="/?page=admin">Inscrits</a></button>
-        <button type="button" class="btn btn-primary btn-lg"><a href="/?page=candidats">Candidats</a></button>
-        <button type="button" class="btn btn-primary btn-lg"><a href="/?page=trainees">Stagiaires</a></button>
+        <button type="button" class="active btn btn-primary btn-lg"><a href="/?controller=admin&action=index">Inscrits</a></button>
+        <button type="button" class="btn btn-primary btn-lg"><a href="/?controller=candidats&action=candidates">Candidats</a></button>
+        <button type="button" class="btn btn-primary btn-lg"><a href="/?controller=trainees&action=trainees">Stagiaires</a></button>
 </div>
 <div class="contData">
     <table class="dataTable">
