--- a/templates/pages/admin/trainees.html.twig
+++ b/templates/pages/admin/trainees.html.twig
@@ -2,8 +2,8 @@
 {% block body%}
 <div class='contBtnMenu'>
                 <button type="button" class=" btn btn-primary btn-lg"><a href="/?controller=admin&action=index">Inscrits</a></button>
-        <button type="button" class="active btn btn-primary btn-lg"><a href="/?controller=admin&action=candidates">Candidats</a></button>
-        <button type="button" class="btn btn-primary btn-lg"><a href="/?controller=admin&action=trainees">Stagiaires</a></button>
+        <button type="button" class="btn btn-primary btn-lg"><a href="/?controller=admin&action=candidates">Candidats</a></button>
+        <button type="button" class="active btn btn-primary btn-lg"><a href="/?controller=admin&action=trainees">Stagiaires</a></button>
 </div>
 <div class="contData">
     <table class="dataTable">
@@ -14,7 +14,7 @@
             <td class="headTable right">Formation</td>
         </thead>
         <tbody>
-            {% for user in candidates %}
+            {% for user in trainees %}
                 <tr>
                     <td class="cel" data-info="Prénom" ><a class="anim-hover" href="index.php?page=profile&id={{ user.id_user }} ?>">{{ user.firstName }}</a></td>
                     <td class="cel" data-info="Nom" ><a >{{ user.familyName }}</a></td>
