--- a/templates/pages/home/index.html.twig
+++ b/templates/pages/home/index.html.twig
@@ -5,7 +5,7 @@
     <h1>ADMIN MNS</h1>
     <div class='container-button-index'>
         <a href="/?controller=security"><button type="button" class="btn btn-primary btn-lg">Connexion</button></a>
-        <a href="/?action=register"><button type="button" class="btn btn-primary btn-lg">Inscription</button></a>
+        <a href="/?controller=home&action=register"><button type="button" class="btn btn-primary btn-lg">Inscription</button></a>
     </div>
 </div>
 {% endblock %}
