--- a/templates/pages/admin/index.html.twig
+++ b/templates/pages/admin/index.html.twig
@@ -1,7 +1,7 @@
 {% extends "partials/base-admin.html.twig" %} 
 {% block body%}
 <div class='contBtnMenu'>
-        <button type="button" class="active btn btn-primary btn-lg"><a href="/?controller=admin&action=Inscrits">Inscrits</a></button>
+        <button type="button" class="active btn btn-primary btn-lg"><a href="/?controller=admin&action=index">Inscrits</a></button>
         <button type="button" class="btn btn-primary btn-lg"><a href="/?controller=admin&action=candidates">Candidats</a></button>
         <button type="button" class="btn btn-primary btn-lg"><a href="/?controller=admin&action=trainees">Stagiaires</a></button>
 </div>
