Zoning + fix mail html

--- a/app/OLD/admin.tpl.twig
+++ b/app/OLD/admin.tpl.twig
@@ -1,8 +1,8 @@
 <?php require '../templates/partials/inc_top.php';?>
 <div class='contBtnMenu'>
-        <button type="button" class="active btn btn-primary btn-lg"><a href="/?controller=admin&action=index">Inscrits</a></button>
-        <button type="button" class="btn btn-primary btn-lg"><a href="/?controller=candidats&action=candidates">Candidats</a></button>
-        <button type="button" class="btn btn-primary btn-lg"><a href="/?controller=trainees&action=trainees">Stagiaires</a></button>
+        <button type="button" class="active btn btn-primary btn-lg"><a href="/?area=admin&controller=home&action=index">Inscrits</a></button>
+        <button type="button" class="btn btn-primary btn-lg"><a href="/?area=admin&controller=home&action=candidates">Candidats</a></button>
+        <button type="button" class="btn btn-primary btn-lg"><a href="/?area=admin&controller=home&action=trainees">Stagiaires</a></button>
 </div>
 <div class="contData">
     <table class="dataTable">
@@ -16,7 +16,7 @@
         <tbody>
             <?php  foreach ($registered as $user) :?>
                 <tr >
-                <td class="cel" data-info="Prénom" ><a class="anim-hover" href="index.php?page=profile&id=<?= $user['id_user'] ?>"><?= $user['firstName'] ?></a></td>
+                <td class="cel" data-info="Prénom" ><a class="anim-hover" href="index.php?area=admin&controller=profile&id=<?= $user['id_user'] ?>"><?= $user['firstName'] ?></a></td>
                 <td class="cel" data-info="Nom" ><a ><?= $user['familyName'] ?></a></td>
                 <td class="cel" data-info="Email" ><a mailto="<?= $user['email'] ?>"><?= $user['email'] ?></a></td>
                 <td class="cel" data-info="Tel" ><a><?= $user['tel'] ?></a></td>
