--- a/templates/pages/candidate/index.html.twig
+++ b/templates/pages/candidate/index.html.twig
@@ -8,7 +8,7 @@
     <p>Pour compléter votre dossier et permettre à l’équipe de MNS d’étudier votre candidature, merci de nous transmettre les documents ci-dessous avant le $dateFinCand</p>
 </div>
 <div class="container-dashboard">
-<form action="?controller=candidate&action=sendFile" method='post' enctype='multipart/form-data'>
+<form action="?area=candidate&controller=home&action=sendFile" method='post' enctype='multipart/form-data'>
     <table class="dataTable">
         <colgroup>
             <col class='col-1' span="1" >
