--- a/templates/pages/home/register.html.twig
+++ b/templates/pages/home/register.html.twig
@@ -9,7 +9,7 @@
  
 <div class="contForm">
     <h1>Formulaire d'inscription</h1>
-<form action="/?action=register" method="POST">
+<form action="/?area=home&controller=home&action=register" method="POST">
     <fieldset>
         <legend>Informations Personnelles</legend>
         
