--- a/templates/pages/security/forgot-password.html.twig
+++ b/templates/pages/security/forgot-password.html.twig
@@ -12,7 +12,7 @@
         <div class="login-form-top">
             <h2>Réinitialisation du mot de passe</h2>
         </div>
-        <form class='reset-container-form' method='post' action='/?controller=security&action=forgotPassword'>
+        <form class='reset-container-form' method='post' action='/?area=security&controller=security&action=forgotPassword'>
             <div class="form-group">
                 <label for="email">Adresse email</label>
                 <input type="email" name="email" class="form-control" id="email_input" placeholder="name@example.com">
