--- a/templates/pages/security/index.html.twig
+++ b/templates/pages/security/index.html.twig
@@ -10,7 +10,7 @@
         <div class="login-form-top">
             <h2>Connectez vous a votre espace ADMIN MNS</h2>
         </div>
-        <form method='post' action='/?controller=security&action=check'>
+        <form method='post' action='/?area=security&controller=security&action=check'>
             <div class="form-group">
                 <label for="email">Adresse email</label>
                 <input type="email" name="email" class="form-control" id="email_input" placeholder="name@example.com">
@@ -32,7 +32,7 @@
                 <div class="container-button-center">
                     <input type="submit" class="btn btn-primary" value="Se connecter" name="submit" />
                 </div>
-            <div class="password_forgotten"><a href="/?controller=security&action=forgotPassword">mot de passe oublié ?</a></div>
+            <div class="password_forgotten"><a href="/?area=security&controller=security&action=forgotPassword">mot de passe oublié ?</a></div>
         </form>    
     </div>
 </div>
