--- a/templates/pages/admin/index.html.twig
+++ b/templates/pages/admin/index.html.twig
@@ -18,7 +18,7 @@
         <tbody>
             {% for user in registered %}
                 <tr>
-                    <td class="cel" data-info="Prénom" ><a class="anim-hover" href="index.php?area=admin&controller=profile&id={{ user.id_user }} ?>">{{ user.firstName }}</a></td>
+                    <td class="cel" data-info="Prénom" ><a class="anim-hover" href="index.php?area=admin&controller=profile&action=register&id={{ user.id_user }}">{{ user.firstName }}</a></td>
                     <td class="cel" data-info="Nom" ><a >{{ user.familyName }}</a></td>
                     <td class="cel" data-info="Email" ><a mailto="{{ user.email }}">{{ user.email }}</a></td>
                     <td class="cel" data-info="Tel" ><a>{{ user.tel }}</a></td>
