--- a/templates/pages/admin/profileRegistered.html.twig
+++ b/templates/pages/admin/profileRegistered.html.twig
@@ -8,18 +8,36 @@
 <div class="contData">
     <div class="Cont_infPerso">
         <div>
-            <p>{{ registered.firstName }} - {{ registered.familyName }} : {{ registered.title_formation }}</p>
+            <h2 class="h_Profile">Formulaire d'inscription</h2>
         </div
-        <p class="head_infPerso">Vos informations personnelles</p>
         <div>
-        <p>Prénom : {{ registered.firstName }} </p>
-        <p>Nom : {{ registered.familyName }} </p>
-        <p>Tel : {{ registered.tel }} </p>
-        <p>Email : {{ registered.email }} </p>
-        <p>Adresse : {{ registered.streetNumber }} {{ registered.laneType }} {{ registered.street }} {{ registered.addressComplement }} {{ registered.postalCode }} {{ registered.city }} </p>
+            <p class="head_infPerso">Vos informations personnelles</p>
+            <div>
+                <p>Prénom : {{ registered.firstName }} </p>
+            </div>
+            <div>
+                <p>Nom : {{ registered.familyName }} </p>
+            </div>
+            <div>
+                <p>Tel : {{ registered.tel }} </p>
+            </div>
+            <div>
+                <p>Email : {{ registered.email }} </p>
+            </div>
+            <div>
+                <p>Adresse : {{ registered.streetNumber }} {{ registered.laneType }} {{ registered.street }} {{ registered.addressComplement }} {{ registered.postalCode }} {{ registered.city }} </p>
+            </div>
+            <div>
+                <p>Formation : {{ registered.title_formation }}</p>
+            </div>
+            
+           
+            
+            
+            
+            
         </div>
     </div>
-
 </div>
 <script src="scripts/adminDash.js"></script>
 
